chelgu_iptables
# Generated by xtables-save v1.8.2 on Wed Apr 14 19:23:09 2021
*nat
:PREROUTING ACCEPT [331:32362]
:INPUT ACCEPT [75:3494]
:POSTROUTING ACCEPT [2:128]
:OUTPUT ACCEPT [2:128]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -s 172.26.0.0/16 ! -o br-63a625e45aa9 -j MASQUERADE
-A POSTROUTING -s 172.26.0.3/32 -d 172.26.0.3/32 -p tcp -m tcp --dport 4573 -j MASQUERADE
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
COMMIT
# Completed on Wed Apr 14 19:23:09 2021
# Generated by xtables-save v1.8.2 on Wed Apr 14 19:23:09 2021
*filter
:INPUT DROP [7560:991226]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [23864:9179017]
:f2b-sshd - [0:0]
:f2b-SSH - [0:0]
:admin - [0:0]
:phones - [0:0]
:sip - [0:0]
-A INPUT -p tcp -m tcp --dport 22 -j f2b-SSH
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -p tcp -m tcp --tcp-flags SYN,ACK SYN,ACK -m state --state NEW -j REJECT --reject-with tcp-reset
-A INPUT -p tcp -m tcp ! --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j DROP
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -m state --state INVALID -j DROP
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j admin
-A INPUT -p udp -m multiport --dports 5060,10000:20000 -j sip
-A INPUT -p icmp -m icmp --icmp-type 3/4 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 10/sec -j ACCEPT
-A f2b-sshd -s 81.161.63.103/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 49.149.21.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
-A f2b-SSH -s 199.19.225.101/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-SSH -s 209.141.52.57/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-SSH -s 81.161.63.103/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-SSH -s 49.149.21.135/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-SSH -j RETURN
-A admin -s 10.10.0.0/24 -j ACCEPT
-A phones -s 192.168.1.0/24 -j ACCEPT
-A phones -s 192.168.2.0/24 -j ACCEPT
-A sip -j phones
-A sip -s 185.45.152.175/32 -j ACCEPT
COMMIT
# Completed on Wed Apr 14 19:23:09 2021
